--- a/Numpy-C01-Numpyndarray.ipynb
+++ b/Numpy-C01-Numpyndarray.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Numpy ndarray\n",
+    
+    "NumPy is a library for the Python programming language, adding support for large, multi-dimensional arrays and matrices, along with a large collection of high-level mathematical functions to operate on these arrays. "
     "    1.A multidimensional array object\n",
     "    2.Create ndarray\n",
     "    3.Array create function:\n",
